# homeharvest-mcp

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
homeharvest/: __init__.py  utils.py
homeharvest/core/scrapers/: __init__.py  models.py
homeharvest/core/scrapers/realtor/: __init__.py  parsers.py  processors.py  queries.py
src/homeharvest_mcp/: server.py
tests/: test_realtor.py
